unpackaged/main/default/objects/zkfedex__RequestedShipmentDocuments__c/fields/zkfedex__CO__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Of Origin</label>
    <type>Checkbox</type>
</CustomField>