unpackaged/main/default/objects/zkfedex__RequestedShipmentDocuments__c/fields/zkfedex__CommercialInvoice__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CommercialInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Invoice</label>
    <referenceTo>zkfedex__CommercialInvoice__c</referenceTo>
    <relationshipLabel>Requested Shipment Documents</relationshipLabel>
    <relationshipName>Requested_Shipment_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>