unpackaged/main/default/objects/zkfedex__RequestedShipmentDocuments__c/fields/zkfedex__CommercialInvoiceSignature__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CommercialInvoiceSignature__c</fullName>
    <label>Commercial Invoice Signature</label>
    <length>20</length>
    <type>Text</type>
</CustomField>