unpackaged/main/default/objects/zkfedex__RequestedShipmentDocuments__c/fields/zkfedex__ModKey__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ModKey__c</fullName>
    <label>Mod Key</label>
    <length>12</length>
    <type>Text</type>
</CustomField>