unpackaged/main/default/objects/zkfedex__RequestedShipmentDocuments__c/fields/zkfedex__OverridePaperlessForIntlDocuments__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__OverridePaperlessForIntlDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, indicates that the specified international documents will not be submitted electronically to FedEx</description>
    <inlineHelpText>If selected, indicates that the specified international documents will not be submitted electronically to FedEx</inlineHelpText>
    <label>Override Paperless for Intl Documents</label>
    <type>Checkbox</type>
</CustomField>