unpackaged/main/default/objects/zkfedex__RequestedShipmentDocuments__c/fields/zkfedex__ProFormaInvoice__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ProFormaInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pro Forma Invoice</label>
    <referenceTo>zkfedex__ProFormaInvoice__c</referenceTo>
    <relationshipLabel>FedEx Requested Shipment Documents</relationshipLabel>
    <relationshipName>FedEx_Requested_Shipment_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>