unpackaged/main/default/objects/zkfedex__RequestedShipmentDocuments__c/fields/zkfedex__ProFormaInvoiceSignature__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ProFormaInvoiceSignature__c</fullName>
    <label>Pro Forma Invoice Signature</label>
    <length>20</length>
    <type>Text</type>
</CustomField>